--- a/Login page/style.css
+++ b/Login page/style.css
@@ -2,9 +2,40 @@ body{
     margin: 0;
     display: flex;
     justify-content: center;
+    min-height: 100vh;
+    align-items: center;
+    background-image: url(imgs/blue-sky-half-moon-crescent-moon-clouds-star-trails-5k-3840x2160-8404.png);
+    background-size: 100%;
+    color: white;
 }
 
 h1{
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
+}
+ 
+.Login{
+    border: solid 2px rgb(255, 254, 254);
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 20px;
+    color: white;
+    box-shadow: 5px 5px 20px 10px rgb(212, 209, 209);
+}
+
+.input-box{
+    margin-bottom: 30px;
+    font-family:  "Raleway", sans-serif;
+}
+
+.info{
+    border: 2px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    width: 50vw;
+    padding: 6px;
+}
+
+footer{
+    background-color: rgb(181, 116, 241);
 }
