--- a/Login page/style.css
+++ b/Login page/style.css
@@ -9,35 +9,32 @@ body{
     color: white;
 }
 
-h1{
-    font-size: 40px;
+.fondo{
+    border: solid 2px white;
+    border-radius: 20px;
+    width: 30vw;
+    height: 35em;
+    padding: 10px;
+    box-shadow: 5px 5px 10px 7px white;
+    backdrop-filter: blur(10px);
+
+}
+
+.fondo h1{
     text-align: center;
-    font-family: "Archivo Black", sans-serif;
-}
- 
-.Login{
-    border: solid 2px rgb(255, 254, 254);
-    border-radius: 10px;
-    font-size: 20px;
-    padding: 20px;
-    color: white;
-    box-shadow: 5px 5px 20px 10px rgb(212, 209, 209);
+    margin-top: 10px;
+    font-size: 50px;
+    font-weight: bold;
 }
 
-.input-box{
-    font-family: "Cinzel", serif;
-    margin-bottom: 30px;
-}
-
-.info{
-    font-family: "Literata", serif;
-    border: none;
-    border-bottom: 2px solid white;
+.datos .usuario{
     background-color: transparent;
-    width: 50vw;
-    padding: 6px;
-}
-
-::placeholder{
-    color: black;
+    margin: 30px;
+    margin-left: 10px;
+    width: 90%;
+    padding: 10px;
+    border: solid 2px white;
+    border-radius: 15px;
+   
+    
 }
