--- a/Login page/style.css
+++ b/Login page/style.css
@@ -38,19 +38,23 @@ body{
     margin-left: 10px;
     width: 90%;
     padding: 10px;
+    outline: none;
     border: solid 2px white;
     border-radius: 25px;
+    color: white;
 }
 
 .submit{
     font-weight: bold;
+    border: solid 2px white;
     color: white;
     width: 12vw;
     background-color: transparent;
     padding: 10px;
     margin: 15px;
-    border: none;
     border-radius: 20px;
+    width: 95%;
+    transition: all 2s;
 }
 
  .datos i{
@@ -62,14 +66,22 @@ body{
 .send i{
     position: absolute;
     left: 40px;
-    bottom: 116px;
+    bottom: 114px;
     font-size: 25px;
+    transition: all 2s;
 }
 
 /*Animaciones*/
 
 .submit:hover{
     transition: 2s;
-    border: solid 1px white;
-    background-color: rgba(209, 207, 207, 0.379);    
+    background-color: rgba(255, 255, 255, 0.677);  
+    box-shadow: 5px 5px 7px black;  
+    color: black;
+    font-weight: bold;
+}
+
+.send:hover i{
+    transition-duration: 2s;
+    color: black;
 }
