--- a/Login page/style.css
+++ b/Login page/style.css
@@ -7,6 +7,7 @@ body{
     background-image: url(imgs/desktop-wallpaper-digital-art-artwork-minimalism-mountains-birds-stars-sky-1920x1080.jpg);
     background-size: cover;
     color: white;
+    overflow: hidden;
 }
 
 ::placeholder {
